--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,20 +15,82 @@
 
 <body>
     <div class="container">
-        <div class="form">
-            <div class="title">Login</div>
-            <form action="#">
-                <div class="input-field">
-                    <input type="text" placeholder="Your email" required>
-                    <i class="uil uil-envelope"></i>
+        <div class="forms">
+            <div class="form login">
+                <div class="title">Login</div>
+                <form action="#">
+                    <div class="input-field">
+                        <input type="text" placeholder="Your email" required>
+                        <i class="uil uil-envelope icon"></i>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" class="password" placeholder="Your password" required>
+                        <i class="uil uil-lock icon"></i>
+                        <i class="uil uil-eye-slash showHidePw"></i>
+                    </div>
+                    <div class="checkbox-text">
+                        <div class="checkbox-content">
+                            <input type="checkbox" id="logCheck">
+                            <label for="logCheck" class="text">Remember me</label>
+                        </div>
+                        <a href="#" class="text">Forgot Password?</a>
+                    </div>
+                    <div class="input-field button">
+                        <input type="button" value="Login Now">
+                    </div>
+                </form>
+
+                <div class="login-signup">
+                    <span class="text">Not a member?
+                        <a href="#" class="text signup-link">Signup Now</a>
+                    </span>
                 </div>
-                <div class="input-field">
-                    <input type="password" placeholder="Your password" required>
-                    <i class="uil uil-lock"></i>
+            </div>
+
+            <!--Dang ki-->
+            <div class="form signup">
+                <div class="title">register</div>
+
+                <form action="#">
+                    <div class="input-field">
+                        <input type="text" placeholder="Confirm Name" required>
+                        <i class="uil uil-user icon"></i>
+                    </div>
+
+                    <div class="input-field">
+                        <input type="text" placeholder=" Confirm email" required>
+                        <i class="uil uil-envelope icon"></i>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" class="password" placeholder="Create password" required>
+                        <i class="uil uil-lock icon"></i>
+                        <i class="uil uil-eye-slash showHidePw"></i>
+                    </div>
+                    <div class="input-field">
+                        <input type="password" class="password" placeholder="Re-enter password" required>
+                        <i class="uil uil-lock icon"></i>
+                        <i class="uil uil-eye-slash showHidePw"></i>
+                    </div>
+                    <div class="checkbox-text">
+                        <div class="checkbox-content">
+                            <input type="checkbox" id="sigCheck">
+                            <label for="sigCheck" class="text">I accept all terms & conditions</label>
+                        </div>
+                    </div>
+                    <div class="input-field button">
+                        <input type="button" value="Signup Now">
+                    </div>
+                </form>
+
+                <div class="login-signup">
+                    <span class="text">Already a member?
+                        <a href="#" class="text login-link">Login Now</a>
+                    </span>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
