--- a/frontend/index.html
+++ b/frontend/index.html
@@ -129,6 +129,9 @@
     </div>
 
     <script src="index.js"></script>
+    <script>
+        window.location.href = "/gop/";
+    </script>
 </body>
 
 </html>
